<resources>
    <string name="app_name">Layout-Animation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_smooth_scroll">Smooth Scroll</string>
    <string name="menu_slide_up">Slide Up</string>
    <string name="menu_slide_down">Slide Down</string>
    <string name="menu_fade_slide_right">Fade Slide Right</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
